-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.5.1, 5.6.0 Beta
-
None
-
Windows
-
20a29fbfe834c108517a23db359827d067246ecd (qtbase/5.6, 23.2.2016, 5.6.1)
The expose event is not delivered to QWindow on Windows when window size is reduced vertically or horizontally. This causes that QWindow::paintEvent(QPaintEvent *) or QOpenGLWindow::paintGL() is not emitted in this case.
- duplicates
-
QTBUG-51314 Shrinking QOpenGLWindow does not cause redraw
-
- Closed
-
- resulted from
-
QTBUG-32121 Windows: Desktop OpenGL: render() not called when window shrinking in size
-
- Closed
-
| For Gerrit Dashboard: QTBUG-51038 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 148943,3 | Windows QPA: Send synthesized expose events when window shrinks. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |