Windows QPA: Send synthesized expose events when window shrinks.

Fix the condition to check for plain move events and gain in
one dimension in which case Windows will send events.

Task-number: QTBUG-51038
Change-Id: I60433657f37275ee302f745291e79e465d52064d
Reviewed-by: Błażej Szczygieł <spaz16@wp.pl>
Reviewed-by: Shawn Rutledge <shawn.rutledge@theqtcompany.com>